<resources>
    <string name="app_name">Spectre</string>
    <string name="enter_as_customer">Enter as Customer</string>
    <string name="enter_as_master">Enter as Master</string>
    <string name="fiz">Физ. лицо</string>
    <string name="ur">Юр. лицо</string>
    <string name="master">Мастер</string>
    <string name="confirm">Подтвердить</string>
    <string name="todo">TODO</string>
    <string name="sign_in">Вход</string>
    <string name="sign_up">Регистрация</string>
</resources>